--- a/static/style.css
+++ b/static/style.css
@@ -75,6 +75,7 @@ body > .home-wrapper {
   margin: 40px 20px 20px;
   padding: 20px 50px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   background-color: #fff;
@@ -97,18 +98,55 @@ body > .home-wrapper {
   content: "";
   background: var(--header-color);
   position: absolute;
-  bottom: -10px;
+  /* bottom: -10px;
   right: -50px;
   width: 2px;
-  height: 110%;
+  height: 110%; */
+
+  bottom: -10px;
+  left: 10%;
+  width: 80%;
+  height: 2px;
 }
 
-.home-wrapper > .home-description {
-  padding: 25px 100px 25px 150px;
-  font-size: 18px;
+.home-text-wrapper {
+  display: flex;
+  margin: 40px 20px;
+  align-items: center;
+  justify-content: center;
+}
+
+.home-text-wrapper > .home-description {
+  padding: 25px 50px;
+  font-size: 24px;
   text-align: justify;
-  width: 80%;
+  width: 100%;
   line-height: 1.4;
+}
+
+.list-wrapper {
+  margin-bottom: 150px;
+  padding: 25px 50px;
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+}
+
+.list-wrapper > #list-title {
+  align-self: center;
+  /* padding-bottom: 120px; */
+  font-size: 34px;
+  position: relative;
+}
+
+.list-wrapper > #list-title::after {
+  content: "";
+  background: var(--header-color);
+  position: absolute;
+  bottom: 10px;
+  left: 0;
+  width: 100%;
+  height: 2px;
 }
 
 #inline-items {
@@ -117,6 +155,18 @@ body > .home-wrapper {
   justify-content: center;
   margin-right: 5%;
   margin-top: -1%;
+}
+
+.list-wrapper > ul {
+  font-size: 20px;
+  padding-top: 45px;
+  list-style: none;
+  line-height: 1.6;
+}
+
+.list-wrapper > ul > li > strong {
+  font-size: 24px;
+  display: inline-block;
 }
 
 .emphasis {
@@ -222,9 +272,17 @@ tbody > tr > td > .link:visited {
     font-size: 38px;
   }
 
-  .home-wrapper > .home-description {
+  .home-text-wrapper > .home-description {
     padding: 25px 50px 25px 150px;
-    font-size: 16px;
+    font-size: 18px;
+  }
+
+  .list-wrapper > #list-title {
+    font-size: 24px;
+  }
+
+  .list-wrapper > ul > li > strong {
+    font-size: 18px;
   }
 }
 
@@ -260,7 +318,7 @@ tbody > tr > td > .link:visited {
     height: 2px;
   }
 
-  .home-wrapper > .home-description {
+  .home-text-wrapper > .home-description {
     padding: 25px 5px 25px 5px;
     font-size: 16px;
   }
