--- a/templates/index.html
+++ b/templates/index.html
@@ -48,31 +48,30 @@
                 </div>
             </span>
         </h2>
-
-        <p class="home-description">When applying for internships/jobs, Computer Science students may find 
-            themselves sending out hundreds of applications. DreamOffer, a 
-            Job Application Tracking database driven web application, helps 
-            applicants keep track of where they have applied already and when their 
-            applications were sent in an organized and simple to use system. 
-            DreamOffer stores data for hundreds of applicants from various backgrounds. 
-            It also stores data for thousands of different applications for hundreds 
-            of companies, and there is still room for growth in these numbers. When 
-            Applicants record new Applications with our database, they record which 
-            Positions at which Companies they applied for, and who the CompanyRecruiters
-            are for those Positions.
-        </p>
+        <div class="home-text-wrapper">
+            <p class="home-description">When applying for internships/jobs, Computer Science students may find 
+                themselves sending out hundreds of applications. DreamOffer, a 
+                Job Application Tracking database driven web application, helps 
+                applicants keep track of where they have applied already and when their 
+                applications were sent in an organized and simple to use system. 
+                DreamOffer stores data for hundreds of applicants from various backgrounds. 
+                It also stores data for thousands of different applications for hundreds 
+                of companies, and there is still room for growth in these numbers. When 
+                Applicants record new Applications with our database, they record which 
+                Positions at which Companies they applied for, and who the CompanyRecruiters
+                are for those Positions.
+            </p>
+            <div class="list-wrapper">
+                <h3 id="list-title">Pages/Entities</h3>
+                <ul>
+                    <li><strong>Applicants</strong> - records the personal details of each Applicant.</li>
+                    <li><strong>Applications</strong> - records the details of every Application Applicants use to apply to specific Positions.</li>
+                    <li><strong>Companies</strong> - records the details of each Company Applicants apply to.</li>
+                    <li><strong>Positions & Company Recruiters</strong> - records the details of Positions/job postings Applicants apply to. Also records the personal details of each 
+                        Company Recruiter and what Positions they recruit for.</li>
+                </ul>
+            </div>
+        </div>
     </div>
-
-    <h3>Pages/Entities</h3>
-    <p>Applicants, Applications, and Companies entities have full CRUD functionality - SELECT, INSERT, UPDATE, DELETE.</p>
-    <p>Positions and CompanyRecruiters entities have partial CRUD functionality - SELECT, INSERT, UPDATE.</p>
-    <p>PositionsCompanyRecruiters intersection table has partial CRUD functionality - SELECT, INSERT, DELETE.</p>
-    <ul>
-        <li><strong>Applicants</strong> - records the personal details of each Applicant.</li>
-        <li><strong>Applications</strong> - records the details of every Application Applicants use to apply to specific Positions.</li>
-        <li><strong>Companies</strong> - records the details of each Company Applicants apply to.</li>
-        <li><strong>Positions & Company Recruiters</strong> - records the details of Positions/job postings Applicants apply to. Also records the personal details of each 
-            Company Recruiter and what Positions they recruit for.</li>
-    </ul>
 </body>
 </html>
