Updated query in Add Position, added copyright, Updated Add Affiliation form

--- a/templates/index.html
+++ b/templates/index.html
@@ -52,8 +52,8 @@
             <p class="home-description">When applying for internships/jobs, Computer Science students may find 
                 themselves sending out hundreds of applications. DreamOffer, a 
                 Job Application Tracking database driven web application, helps 
-                applicants keep track of where they have applied already and when their 
-                applications were sent in an organized and simple to use system. 
+                applicants keep track of where they have applied and when their 
+                applications were submitted, in an organized and simple to use system. 
                 DreamOffer stores data for hundreds of applicants from various backgrounds. 
                 It also stores data for thousands of different applications for hundreds 
                 of companies, and there is still room for growth in these numbers. When 
@@ -72,6 +72,11 @@
                 </ul>
             </div>
         </div>
+    </div>
+    <div class="copyright">
+        <footer>
+            <p>&copy; 2022 Don Reniff, Sophia Lilienthal</p>
+        </footer>
     </div>
 </body>
 </html>
