--- a/templates/search_application.j2
+++ b/templates/search_application.j2
@@ -29,6 +29,7 @@
                     <th>Result Date</th>
                     <th>Applicant</th>
                     <th>Position</th>
+                    <th>Company</th>
                 </tr>
             </thead>
 
