--- a/templates/edit_company.j2
+++ b/templates/edit_company.j2
@@ -52,8 +52,12 @@
                     type="url" 
                     class="form-control" 
                     id="website" 
-                    name="website" 
-                    value="{{data[0].website}}"
+                    name="website"
+                    {% if not data[0].website %}
+                        value=""
+                    {% else %} 
+                        value="{{data[0].website}}"
+                    {% endif %}
                     pattern="(https?:\/\/(?:www\.|(?!www))[a-zA-Z0-9][a-zA-Z0-9-]+[a-zA-Z0-9]\.[^\s]{2,}|www\.[a-zA-Z0-9][a-zA-Z0-9-]+[a-zA-Z0-9]\.[^\s]{2,}|https?:\/\/(?:www\.|(?!www))[a-zA-Z0-9]+\.[^\s]{2,}|www\.[a-zA-Z0-9]+\.[^\s]{2,})"
                 />
                 <label for="description">Description</label> 
